# diogenes

./: .gitignore  mise.toml
.github/workflows/: ci.yml  release.yml
cli/: go.mod  mise.toml
cli/cmd/diogenes/: main.go
examples/code-review/: code_review_agent.py  mise.toml
integrations/openai/: README.md  mise.toml  pyproject.toml
integrations/openai/src/: __init__.py
integrations/openai/tests/: test_placeholder.py
sdk/python/: mise.toml  pyproject.toml
sdk/python/src/diogenes/: cli.py  core.py  exporter.py  storage.py
sdk/python/tests/: conftest.py
sdk/python/tests/integration/: test_agent_loop.py
sdk/python/tests/unit/: test_core.py
spec/: mise.toml  trace-format.md
