[build-system]
requires      = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "diogenes-openai"
version     = "0.1.0"
description = "OpenAI client adapter for Diogenes — emit diogenes.* OTel spans from OpenAI calls"
readme      = "README.md"
license     = "Apache-2.0"
requires-python = ">=3.11"
keywords    = ["llm", "agents", "testing", "observability", "opentelemetry", "openai"]

dependencies = [
    "diogenes-sdk>=0.1.0",
    "openai>=1.0",
]

[tool.uv.sources]
diogenes-sdk = { path = "../../sdk/python", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"